# bot

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/discord/: bot.rs  mod.rs
src/discord/commands/: mod.rs  rom.rs
src/matrix/: bot.rs
src/telegram/: bot.rs
store/matrix-sdk-state/: db  snap.0000000000001FEA
