[package]
name = "rombot"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Tricked-dev <me@tricked.pro>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
base64 = "0.13.0"
dotenv = "0.15.0"
fuse-rust = "0.3.0"
futures = "0.3.19"
http = "0.2.6"
lazy_static = "1.4.0"
log = "0.4.14"
matrix-sdk = { version = "0.4.1", features = ["markdown"] }
once_cell = "1.9.0"
openssl = { version = "0.10.38", optional = true }
rand = "0.8.4"
reqwest = { version = "0.11.9", features = ["json", "gzip", "brotli"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
tbot = { git = "https://gitlab.com/Tricked/tbot", branch = "Tricked-master-patch-47419" }
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.6"
twilight-gateway = "0.8.4"
twilight-http = "0.8.4"
twilight-model = "0.8.4"
twilight-util = { version = "0.8.2", features = ["builder"] }
url = "2.2.2"
urlencoding = "2.1.0"

[features]
nodiscord = []
notelegram = []
nomatrix = []
